Actions
Bug #8830
closedlibshell: variable set but not used
Start date:
2017-11-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Debug build error from gcc 6:
../common/sh/xec.c: In function 'sh_ntfork': ../common/sh/xec.c:2980:13: error: variable 'savejobid' set but not used [-Werror=unused-but-set-variable] static int savejobid; ^~~~~~~~~ ../common/sh/parse.c:1288:17: error: variable 'argmax' set but not used [-Werror=unused-but-set-variable] int argno = 0, argmax=0; ^~~~~~ ../common/bltins/misc.c:60:19: error: parameter 'argc' set but not used [-Werror=unused-but-set-parameter] int b_exec(int argc,char *argv[], void *extra) ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 19700af4088d99a0f173873dcdfcf51fdb90335b
commit 19700af4088d99a0f173873dcdfcf51fdb90335b Author: Toomas Soome <tsoome@me.com> Date: 2017-12-13T19:37:28.000Z 8830 libshell: variable set but not used Reviewed by: ken mays <maybird1776@yahoo.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions