8830 libshell: variable set but not used Reviewed by: ken mays <maybird1776@yahoo.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>